--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
         <br>
         <div class="image-block">
-           <img src="https://source.unsplash.com/900x900/?city,water" id="realimage" class="backimage" alt="Bu yerda quyosh rasmi bo'lishi kerak edi">
+           <img src="https://source.unsplash.com/900x900/?city,water" download id="realimage" class="backimage" alt="Bu yerda quyosh rasmi bo'lishi kerak edi">
             <div class="style-block">  
                  <p class="qoute" id="quote">Something is not anything,
                     Somewhere is not anywhere.</p>
